@@ -23,6 +23,8 @@ OPENSEADRAGON CHANGELOG
 * MouseTracker: Fire dragEndHandler event even if release point same as initial contact point (#1459)
 * MouseTracker: Pointer capture implemented with capture APIs where available. Only fallback to emulated capture on extremely old browsers
 * MouseTracker: Added preProcessEventHandler option to allow MouseTracker instances to control bubbling and default behavior of events on their associated element
+* MouseTracker: Improved handling of canceled events (#1728)
+* MouseTracker: Improved releasing of tracked pointers on destroy()/stopTracking() (#1346)
 * Updated Viewer, Button, Drawer, Navigator, ReferenceStrip DOM for proper DOM event handling
 * Added OpenSeadragon.setElementPointerEventsNone() for setting pointer-events:'none' on DOM elements
 
